--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
+  get_ip: ^0.4.0
+  font_awesome_flutter: ^8.7.0
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
